--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ form button:hover {
   margin: 0.5rem;
 }
 
+li{
+  word-break:break-all;
+}
+
 .shadow {
   box-shadow: 0px 10px 10px -5px rgb(211, 211, 211);
 }
